Revert "ahora se puede abrir el MayorGeneral desde la ventana de Cuenta, ahora se puede abrir el formulario desde LibroDiarioView y BalanceComView"
This reverts commit 5e4ed166c4be0c46d9129ce7c2d051e776f95ea3.