@@ -10,7 +10,6 @@ import com.nutrehogar.sistemacontable.ui.styles.ButtonStyle;
 import java.awt.event.ItemEvent;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Objects;
 import java.util.regex.Pattern;
 import javax.swing.JOptionPane;
 import javax.swing.table.DefaultTableModel;
@@ -39,9 +38,9 @@ public class CuentaVentana extends javax.swing.JFrame {
         comboxSubtipoCuenta.addItemListener(this::elementoEscuchador);
         
         // Trayendo los tipos de cuenta
-        tiposCuenta.addAll(TipoCuentaRepo.findAll());
-        texfieTipoCuenta.setText(tiposCuenta.getFirst().getId() +  " " +
-            tiposCuenta.getFirst().getNombre()
+        TipoCuentaRepo.findAll().forEach(tipoCuenta -> tiposCuenta.add(tipoCuenta));
+        texfieTipoCuenta.setText(tiposCuenta.get(0).getId() +  " " +
+            tiposCuenta.get(0).getNombre()
         );
         
         // Cambiando contenido de la ventana dependiendo de si es añadir o editar
@@ -184,7 +183,9 @@ public class CuentaVentana extends javax.swing.JFrame {
     
     // Escuchador de selección de comboxSubtipoCuenta
     private void elementoEscuchador(ItemEvent e) {
-        int tipoCuentaId = Integer.parseInt(Objects.requireNonNull(comboxSubtipoCuenta.getSelectedItem()).toString().substring(0, 1));
+        Integer tipoCuentaId = Integer.valueOf(
+            comboxSubtipoCuenta.getSelectedItem().toString().substring(0, 1)
+        );
         TipoCuenta tipoCuenta = tiposCuenta.get(tipoCuentaId - 1);
         texfieTipoCuenta.setText(
                 tipoCuenta.getId() + " " + tipoCuenta.getNombre()
@@ -209,7 +210,7 @@ public class CuentaVentana extends javax.swing.JFrame {
             String id = texfieCodigo.getText();
             String nombre = texfieNombre.getText();
             SubTipoCuenta subtipoCuenta = SubTipoCuentaRepo.findById(
-                    Objects.requireNonNull(comboxSubtipoCuenta.getSelectedItem()).toString().split("\\s")[0]
+                    comboxSubtipoCuenta.getSelectedItem().toString().split("\\s")[0]
             );
 
             Cuenta cuenta = Cuenta.builder()
@@ -233,7 +234,7 @@ public class CuentaVentana extends javax.swing.JFrame {
             String id = texfieCodigo.getText();
             String nombre = texfieNombre.getText();
             SubTipoCuenta subtipoCuenta = SubTipoCuentaRepo.findById(
-                    Objects.requireNonNull(comboxSubtipoCuenta.getSelectedItem()).toString().split("\\s")[0]
+                    comboxSubtipoCuenta.getSelectedItem().toString().split("\\s")[0]
             );
 
             Cuenta cuenta = Cuenta.builder()
@@ -266,7 +267,7 @@ public class CuentaVentana extends javax.swing.JFrame {
             return false;
         }
         
-        if (!texfieCodigo.getText().startsWith(Objects.requireNonNull(comboxSubtipoCuenta.getSelectedItem()).toString().split("\\s")[0])) {
+        if (!texfieCodigo.getText().startsWith(comboxSubtipoCuenta.getSelectedItem().toString().split("\\s")[0])) {
             JOptionPane.showMessageDialog(
                     this, "El código de la cuenta debe comenzar igual que el código del subtipo de cuenta."
             );
